# DiplomCPP

./: Diplom.sln
Diplom/: CMakeLists.txt  Diplom.vcxproj  Diplom.vcxproj.filters
HttpServer/: CMakeLists.txt  HttpServer.vcxproj  HttpServer.vcxproj.filters  http_connection.cpp  http_connection.h  main.cpp  settings.h  settings.ini
Spider/: CMakeLists.txt  Parser.cpp  Parser.h  Spider.vcxproj  Spider.vcxproj.filters  content.xml  http_utils.cpp  http_utils.h  link.h  main.cpp  settings.h  settings.ini
